2008-01-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/threadqfirst.c: Remove switch.

2008-01-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/include/rtems/rtems/event.h,
	rtems/inline/rtems/rtems/eventset.inl, rtems/src/event.c,
	rtems/src/eventseize.c, rtems/src/eventsurrender.c,
	rtems/src/eventtimeout.c, score/Makefile.am, score/preinstall.am,
	score/include/rtems/score/interr.h,
	score/include/rtems/score/thread.h,
	score/include/rtems/score/threadq.h,
	score/include/rtems/score/tqdata.h,
	score/inline/rtems/score/threadq.inl,
	score/inline/rtems/score/tqdata.inl, score/src/threadq.c,
	score/src/threadqdequeue.c, score/src/threadqdequeuefifo.c,
	score/src/threadqdequeuepriority.c, score/src/threadqenqueue.c,
	score/src/threadqenqueuefifo.c, score/src/threadqenqueuepriority.c,
	score/src/threadqextract.c, score/src/threadqextractfifo.c,
	score/src/threadqextractpriority.c,
	score/src/threadqextractwithproxy.c, score/src/threadqfirst.c,
	score/src/threadqfirstfifo.c, score/src/threadqfirstpriority.c,
	score/src/threadqflush.c, score/src/threadqrequeue.c,
	score/src/threadqtimeout.c: Refactor thread queue enqueue and event
	blocking synchronization critical sections. This resulted in three
	copies of essentially the same hard to test critical section code
	becoming the one shared routine _Thread_blocking_operation_Cancel. In
	addition, the thread queue and event code now share a common
	synchronization enumerated type. Along the way, switches were
	reworked to eliminate dead code generated by gcc and comments and
	copyrights were updated.
	* score/include/rtems/score/threadsync.h,
	score/src/threadblockingoperationcancel.c: New files.

2008-01-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libi2c/README_libi2c: Correct spelling error.
	* score/src/threadclearstate.c: Improve comment.

2008-01-18	Jennifer Averett <jennifer.averett@OARcorp.com>

	* posix/include/rtems/posix/timer.h, posix/src/cleanuppop.c,